background color doesn't bleed tru the progressbar anymore (somewhat related to issue 21, at least it was found investigating this one)

--- a/css/Aristo/jquery-ui-1.8.7.custom.css
+++ b/css/Aristo/jquery-ui-1.8.7.custom.css
@@ -699,5 +699,5 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
  *
  * http://docs.jquery.com/UI/Progressbar#theming
  */
-.ui-progressbar { height: 12px; text-align: left; background: url(images/progress_bar.gif) 0 -14px repeat-x; }
+.ui-progressbar { height: 12px; text-align: left; background:white  url(images/progress_bar.gif) 0 -14px repeat-x; }
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; background: url(images/progress_bar.gif) 0 0 repeat-x; }
